--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue": "^2.3.1",
+    "prettier": "^2.6.2",
     "sass": "^1.50.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
