--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
+    "@vicons/antd": "^0.12.0",
+    "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^2.3.1",
     "prettier": "^2.6.2",
     "sass": "^1.50.1",
